tests/baselines/reference/multipleExports(strict=true).errors.txt
multipleExports.ts(3,16): error TS7005: Variable 'x' implicitly has an 'any' type.
multipleExports.ts(9,5): error TS1194: Export declarations are not permitted in a namespace.
multipleExports.ts(9,13): error TS2484: Export declaration conflicts with exported declaration of 'x'.


==== multipleExports.ts (3 errors) ====
    export module M {
        export var v = 0;
        export let x;
                   ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
    }
    
    const x = 0;
    export module M {
        v;
        export {x};
        ~~~~~~~~~~~
!!! error TS1194: Export declarations are not permitted in a namespace.
                ~
!!! error TS2484: Export declaration conflicts with exported declaration of 'x'.
    }
    